# dbus-spotify-example

./: CMakeLists.txt  LICENSE  MediaPlayer2.xml  main.cpp  main.qml  mediaplayer.cpp  mediaplayer.h  resources.qrc
